# Peptipedia

./: .gitignore  CITATION.cff  Pendientes.txt  README.md  build.sh  compose.yml  package-lock.json  peptipedia-pod.yaml
backend/: .containerignore  .gitignore  Containerfile  README.md  entrypoint.sh  environment.yml  pyproject.toml  requirements.txt
backend/peptipedia/: __init__.py  blueprint.py  config.py  main.py  plugins.py  wsgi.py
backend/peptipedia/database/: models.py
backend/peptipedia/modules/: utils.py
backend/peptipedia/modules/database_models/: database.py  materialized_views.py  table_models.py
backend/peptipedia/modules/procedure_models/: alignment.py
backend/peptipedia/routes/: activities.py  advanced_search.py  blast.py  database.py  downloads.py  home.py  profile.py  search.py  sources.py
backend/peptipedia/services/: router.py
backend/peptipedia/services/activities/: controllers.py  dtos.py  repositories.py
backend/peptipedia_old/: blueprint.py  main.py
backend/peptipedia_old/modules/: utils.py
backend/peptipedia_old/modules/database_models/: database.py  materialized_views.py  table_models.py
backend/peptipedia_old/routes/: blast.py  downloads.py  home.py  search.py
bd/scripts/: database.py  materialized_views.py  table_models.py
deploy/: .gitignore  build.sh  peptipedia-pod.kube  peptipedia-pod.yaml  peptipedia-secrets.example.yaml  peptipedia.network
frontend/: Containerfile  README.md  env.example  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  config.json
frontend/src/context/: AppContext.tsx  AppProvider.tsx
frontend/src/hooks/: useGetBarchart.tsx  useGetTable.tsx  useGetTableAndBarchart.tsx  useHandlerBackendUrl.tsx  (+1 more)
(+64 files in other folders)
