[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "biopython==1.81",
    "flask-cors==4.0.0",
    "flask==2.3.3",
    "gunicorn==21.2.0",
    "matplotlib==3.7.2",
    "networkx==3.1",
    "numpy==1.25.2",
    "pandas==2.0.3",
    "psycopg2-binary==2.9.7",
    "scikit-learn==1.3.0",
    "scipy==1.11.2",
    "sqlalchemy==2.0.20",
]
