[project]
name = "peptipedia-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "litestar[sqlalchemy,standard]>=2.13.0",
    "pydantic-settings>=2.6.1",
    "sqlalchemy-utils>=0.41.2",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "ruff>=0.8.2",
]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.mypy]
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
